--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "nodemon": "~1.3.7",
     "usb-detection": "~1.0.3",
     "telnet-client": "0.0.8",
-    "nanotimer": "~0.3.10"
+    "nanotimer": "~0.3.10",
+    "getopt": "~0.1.0",
+    "node-getopt": "~0.2.3",
+    "minimist": "~1.1.0"
   }
 }
